[gd_scene load_steps=5 format=3 uid="uid://lwkp201ygl4l"]

[ext_resource type="Script" path="res://Scripts/slenderman_statemachine.gd" id="1_d7kx2"]
[ext_resource type="PackedScene" uid="uid://cv5nmj5vn5a10" path="res://Assets/godot_man.glb" id="2_mfokq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_t7gup"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_4kdkr"]
radius = 9.85391

[node name="slenderman" type="CharacterBody3D"]
script = ExtResource("1_d7kx2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09436, 0)
shape = SubResource("SphereShape3D_t7gup")

[node name="godot_man" parent="." instance=ExtResource("2_mfokq")]

[node name="RayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0946034, 1.35923, 0.0350329)
target_position = Vector3(0, 0, 10)

[node name="SightRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.027606, 0, 0.00644684)
shape = SubResource("SphereShape3D_4kdkr")

[node name="Eyes" type="Node3D" parent="."]

[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
